Fix Blood Bank Section

--- a/templates/About/about.html
+++ b/templates/About/about.html
@@ -8,15 +8,24 @@
     </div>
    
     <div class="about text-center my-3 p-2">
-        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt expedita, minima maiores quo laudantium nesciunt eos, assumenda explicabo qui culpa molestiae cupiditate quos ipsum veritatis iure praesentium necessitatibus quae in?</p>
+        <p class="lead">Kerala Blood Bank Portal is an initaitive taken by a non-pofit organisation to help the needy.</p>
         <div class="contact my-4 text-start">
            <h4 class="border-bottom my-2">Contact us</h4>
-            <div class="row my-4 bg-secondary p-5 rounded text-white">
-                <div class="col-sm-6">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur non nostrum perferendis fuga. Temporibus veniam excepturi ea fugiat provident?
-                </div>
-                <div class="col-sm-6">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum recusandae, consectetur a dicta similique tempore aperiam voluptas error nostrum eius.
+            <div class="animate__animated animate__fadeInUp">
+                <div class="row my-4 bg-secondary  rounded text-white">
+                    <div class="col-sm-6 bg-danger p-5">
+                        <h6 class="border-bottom">Address</h6>
+                            <address>
+                                Kerala Blood Bank Portal, <br>
+                                Thiruvananthapuram, <br>
+                                Kerala-695614
+                            </address>
+                    </div>
+                    <div class="col-sm-6 bg-light p-5 text-dark">
+                        <a href="tel:1234567890" class=""><button class="btn btn-primary my-2 btn-lg px-4">+91-123456789</button></a>
+                        <a href="mailto:kbbp@gmail.com" class=" my-3"><button class="btn btn-danger btn-lg px-4">KBBP@gmail.com</button></a>
+    
+                    </div>
                 </div>
             </div>
         </div>
