--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -14,8 +14,7 @@
             <div class="col-sm-6">
                 <div class="p-5">
                     <div class="d-flex flex-column justify-content-end">
-                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto omnis
-                            temporibus, earum explicabo magni aperiam deleniti in? Modi, nulla aperiam!</p>
+                        <p class="lead">Donating blood has benefits for your emotional and physical health. According to a report by the Mental Health Foundation, helping others can: reduce stress; improve your emotional well being.</p>
                     </div>
                 </div>
             </div>
@@ -32,29 +31,24 @@
                     alt="blood" class="img img-fluid h-100" width="400px" height="200px">
             </div>
             <div class="col-sm-6 text-center p-5">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus facere ad quibusdam
-                    sequi quia harum iste perspiciatis laudantium, accusamus dolorem. Perspiciatis alias odio similique
-                    voluptate est hic fuga repellat aspernatur.</p>
+                <p class="lead">Every year millions of lives are being saved because of donation of blood and blood products. Blood donation has helped various patients who were suffering from life threatening conditions to live longer with higher quality of life.</p>
             </div>
         </div>
     </div>
     <div class="container border my-4 p-5">
         <div class="row p-2">
             <div class="col-sm-4"> <i class="bi bi-activity fs-1"></i></div>
-            <div class="col-sm-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut architecto
-                beatae tempora voluptates vel, error velit nesciunt animi sit?</div>
+            <div class="col-sm-8">Blood Donation helps to reduce risk of heart attack and cancer</div>
         </div>
         <hr>
         <div class="row my-3 p-2">
             <div class="col-sm-4"><i class="bi bi-hospital-fill fs-1"></i></div>
-            <div class="col-sm-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut architecto
-                beatae tempora voluptates vel, error velit nesciunt animi sit?</div>
+            <div class="col-sm-8">By donating blood you can save someone's life</div>
         </div>
         <hr>
         <div class="row p-2">
             <div class="col-sm-4"> <i class="bi bi-heart-pulse-fill fs-1"></i></div>
-            <div class="col-sm-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut architecto
-                beatae tempora voluptates vel, error velit nesciunt animi sit?</div>
+            <div class="col-sm-8">Every two seconds someone needs blood</div>
         </div>
     </div>
 </div>
