--- a/templates/UI/footer.html
+++ b/templates/UI/footer.html
@@ -15,10 +15,12 @@
                 </div>
             </div>
             <div class="col-md-4 rounded p-3 ">
-                <h4 class="">Quick Links</h4>
-                <hr class="my-3">
-                <div class="row">
-
+                {% comment %} <h4 class="">Quick Links</h4> {% endcomment %}
+                {% comment %} <hr class="my-3"> {% endcomment %}
+                <div class="row mt-4">
+                    <div class="animate__animated animate__flash animate_repeat-3">
+                        <p class="lead">Copyright@{%now 'Y'%}</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4  rounded p-3 ">
