--- a/templates/UI/navbar.html
+++ b/templates/UI/navbar.html
@@ -1,7 +1,7 @@
 <div id="navbar">
     <nav class="navbar navbar-expand-lg  navbar-dark py-5 bg-danger">
         <div class="container-fluid">
-            <a class="navbar-brand " href="/"><span class="display-5">Blood Bank</span></a>
+            <a class="navbar-brand " href="/"><span class="display-5 ">Blood Bank</span></a>
             <button class="navbar-toggler text-white " type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link "><button
+                        <a class="nav-link" href="{%url 'login:b_request'%}"><button
                                 class=" animate__animated animate__pulse btn-lg animate__repeat-2 btn w-100  btn-dark text-light">Booking</button></a>
                     </li>
                 </ul>
