--- a/templates/serviceFrame/bloodBank.html
+++ b/templates/serviceFrame/bloodBank.html
@@ -19,5 +19,96 @@
     </div>
   </nav>
   <hr class="my-4">
-  
+  <div class="content border my-4 p-5 container">
+    <div class="error">
+        {% if messages %}
+          {% for message  in messages  %}
+            <p class="lead text-center">{{message}}</p>
+          {% endfor %}
+        {% endif %}
+        {% if forms.error %}
+          {% for error  in form.error  %}
+            <div class="small row">{{error}}</div>
+          {% endfor %}
+        {% endif %}
+    </div>
+    <div class="request p-5 border-top border-bottom">
+      <h4>Fill Request Form</h4>
+      <form action="#" method="post">
+        {% csrf_token %}
+         <div class="row">
+           <div class="col-sm-6 my-2">
+             {{form.pincode}}
+           </div>
+           <div class="col-sm-6 my-2 text-end">
+             <button class="btn btn-primary" onclick="fetchLocation()">Get Location</button>
+           </div>
+         </div>
+         <h4 class="border-bottom my-4">Location</h4>
+         <div class="row">
+           <div class="col-sm-6 my-2">
+             {{form.district}}
+           </div>
+           <div class="col-sm-6 my-2">
+             {{form.city}}
+           </div>
+         </div>
+         <div class="row my-4">
+           <div class="col-sm-6">
+             {{form.mobile}}
+           </div>
+         </div>
+         <hr>
+         <div class="my-4">
+           <h4 class="my-3">Select Blood type:</h4>
+           <div class="row mx-5">
+             {{form.blood}}
+           </div>
+         </div>
+         <div class="row my-4 d-flex justify-content-center">
+           <p class="lead text-center w-50"><input type="checkbox" name="checkme" required id="" class='form-check-input mx-2'>I hereby agree that requested blood are only used for medical emergencies only.Incase if found it for other purpose legal steps are taken aganist the user.</p>
+         </div>
+         <div class="d-flex justify-content-center">
+          <button class="btn btn-danger py-2 fs-4 px-4">Submit</button>
+         </div>
+      </form>
+    </div>
+  </div>
 {% endblock content %}
+{% block customScript %}
+<script src="../../static/node_modules/toastify-js/src/toastify.js"></script>
+<script>
+  const fetchLocation = () => {
+      pincode = $("#id_pincode").val();
+      const regx = /^\d+$/;
+      if (pincode.match(regx)) {
+          $.getJSON(
+              " https://api.postalpincode.in/pincode/" + pincode,
+              function (data) {
+                  var resData = [
+                      data[0].PostOffice[0].Name,
+                      data[0].PostOffice[0].District,
+                  ];
+                  $("#id_district").val(resData[1]);
+                  $("#id_city").val(resData[0]);
+              }
+          );
+      }
+      else {
+          Toastify({
+              text: "Error: Invalid Pincode!",
+              duration: 3000,
+              newWindow: false,
+              gravity: "bottom", // `top` or `bottom`
+              position: "right", // `left`, `center` or `right`
+              stopOnFocus: true, // Prevents dismissing of toast on hover
+              style: {
+                  background: "red",
+
+              },
+              // Callback after click
+          }).showToast();
+      }
+  };
+</script>
+{% endblock customScript %}
