--- a/templates/Register/userRegister.html
+++ b/templates/Register/userRegister.html
@@ -4,11 +4,8 @@
     font-size: x-large;
   }
 </style>
-<link
-  rel="stylesheet"
-  href="../../static/node_modules/toastify-js/src/toastify.css"
-/>{%endblock%} 
-{% block title %}Registration{% endblock title %} 
+<link rel="stylesheet" href="../../static/node_modules/toastify-js/src/toastify.css" />{%endblock%}
+{% block title %}Registration{% endblock title %}
 {% block content %}
 <div class="content my-5">
   <div class="container">
@@ -19,20 +16,20 @@
       <div class="col-md-12">
         {% if messages %}
         <div class="messages alert alert-danger">
-            {% for message in messages %}
-            <span{% if message.tags %} class="{{ message.tags }} "{% endif %}>{{ message }}</span>
+          {% for message in messages %}
+          <span{% if message.tags %} class="{{ message.tags }} " {% endif %}>{{ message }}</span>
             {% endfor %}
         </div>
         {% endif %}
         {% comment %} {% if form.errors %}
-            {% for error in form.errors  %}
-                      <strong>{{ error|escape }}</strong>
-            {% endfor %}
+        {% for error in form.errors %}
+        <strong>{{ error|escape }}</strong>
+        {% endfor %}
         {% comment %} {% comment %} {% for error in form.non_field_errors %}
         <div class="alert alert-danger">
           <strong>{{ error|escape }}</strong>
         </div>
-        {% endfor %} 
+        {% endfor %}
         {% endif %} {% endcomment %}
       </div>
     </div>
@@ -41,15 +38,15 @@
         {% csrf_token %}
         <div class="row my-2">
           <div class="col-sm-4 my-1">{{form.first_name}}
-              <div class="valid-feedback">
-                {% if form.first_name.errors %}
-                {% for error in form.first_name.errors %}
-                <div>
-                    {{ error|escape }}
-                </div>
-                {% endfor %}
-                {% endif %}
+            <div class="valid-feedback">
+              {% if form.first_name.errors %}
+              {% for error in form.first_name.errors %}
+              <div>
+                {{ error|escape }}
               </div>
+              {% endfor %}
+              {% endif %}
+            </div>
           </div>
           <div class="col-sm-4 my-1">{{form.last_name}}</div>
           <div class="col-sm-4 my-1">{{form.dob}}</div>
@@ -72,39 +69,35 @@
           <div class="col-sm-6">{{form.blood}}</div>
         </div>
         <div class="row my-2">
-            <div class="col-sm-6 my-3">{{form.password1}}
-                <div class="lead">
-                    {% if form.password1.errors %}
-                    {% for error in form.password1.errors %}
-                    <div>
-                        {{ error|escape }}
-                    </div>
-                    {% endfor %}
-                    {% endif %}
-                  </div>
-            </div>
-            <div class="col-sm-6 my-3">{{form.password2}}
-                <div class=" mx-3 small text-danger">
-                    {% if form.password2.errors %}
-                    {% for error in form.password2.errors %}
-                    <div>
-                        {{ error|escape }}
-                    </div>
-                    {% endfor %}
-                    {% endif %}
-                  </div>
+          <div class="col-sm-6 my-3">{{form.password1}}
+            <div class="lead">
+              {% if form.password1.errors %}
+              {% for error in form.password1.errors %}
+              <div>
+                {{ error|escape }}
+              </div>
+              {% endfor %}
+              {% endif %}
             </div>
           </div>
+          <div class="col-sm-6 my-3">{{form.password2}}
+            <div class=" mx-3 small text-danger">
+              {% if form.password2.errors %}
+              {% for error in form.password2.errors %}
+              <div>
+                {{ error|escape }}
+              </div>
+              {% endfor %}
+              {% endif %}
+            </div>
+          </div>
+        </div>
         <hr class="my-3" />
         <div class="row">
           <h5 class="my-2">Location</h5>
           <div class="col-sm-4 my-2">{{form.pincode}}</div>
           <div class="col-sm-4 my-2">
-            <button
-              class="btn btn-primary"
-              onclick="fetchLocation()"
-              type="button"
-            >
+            <button class="btn btn-primary" onclick="fetchLocation()" type="button">
               Fetch Details
             </button>
           </div>
@@ -113,9 +106,7 @@
         <div class="row" id="fetchRes">
           <h5 class="my-2">Location Details</h5>
           <div class="row">
-            <label for="District" class="col-form-label col-sm-3"
-              >District:</label
-            >
+            <label for="District" class="col-form-label col-sm-3">District:</label>
             <div class="col-sm-3">{{form.district}}</div>
             <label for="District" class="col-form-label col-sm-2">City:</label>
             <div class="col-sm-4">{{form.city}}</div>
@@ -125,11 +116,7 @@
             if there is any mistake in any of the details please edit those
             information kindly.Thank You
           </p>
-          <input
-            type="submit"
-            value="Register"
-            class="btn my-4 btn-primary p-2"
-          />
+          <input type="submit" value="Register" class="btn my-4 btn-primary p-2" />
         </div>
       </form>
     </div>
@@ -139,28 +126,28 @@
 <div></div>
 <hr />
 
- {% endblock content %} 
- {% block customScript %}
+{% endblock content %}
+{% block customScript %}
 <script src="../../static/node_modules/toastify-js/src/toastify.js"></script>
 <script>
+  
   const fetchLocation = () => {
-      pincode = $("#id_pincode").val();
-      const regx = /^\d+$/;
-      if (pincode.match(regx)) {
-          $.getJSON(
-              " https://api.postalpincode.in/pincode/" + pincode,
-              function (data) {
-                  var resData = [
-                      data[0].PostOffice[0].Name,
-                      data[0].PostOffice[0].District,
-                  ];
-                  $("#id_district").val(resData[1]);
-                  $("#id_city").val(resData[0]);
-              }
-          );
-      }
-      else {
-          Toastify({
+    pincode = $("#id_pincode").val();
+    const regx = /^\d+$/;
+    if (pincode.match(regx)) {
+      $.getJSON(
+        " https://api.postalpincode.in/pincode/" + pincode,
+        function (data) {
+          if (data[0].PostOffice!=null) {
+            var resData = [
+              data[0].PostOffice[0].Name,
+              data[0].PostOffice[0].District,
+            ];
+            $("#id_district").val(resData[1]);
+            $("#id_city").val(resData[0]);
+          }
+          else {
+            Toastify({
               text: "Error: Invalid Pincode!",
               duration: 3000,
               newWindow: false,
@@ -168,27 +155,48 @@
               position: "right", // `left`, `center` or `right`
               stopOnFocus: true, // Prevents dismissing of toast on hover
               style: {
-                  background: "red",
+                background: "red",
 
               },
               // Callback after click
-          }).showToast();
-      }
-  };
-  {% comment %} {%if form.errors %}
-        Toastify({
-          text: "User Exist",
-          duration: 3000,
-          newWindow: false,
-          gravity: "bottom", // `top` or `bottom`
-          position: "center", // `left`, `center` or `right`
-          stopOnFocus: true, // Prevents dismissing of toast on hover
-          style: {
-              background: "red",
+            }).showToast();
+          }
+        }
+      );
+    }
+    else {
+      Toastify({
+        text: "Error: Invalid Pincode!",
+        duration: 3000,
+        newWindow: false,
+        gravity: "bottom", // `top` or `bottom`
+        position: "right", // `left`, `center` or `right`
+        stopOnFocus: true, // Prevents dismissing of toast on hover
+        style: {
+          background: "red",
 
-          },
-          // Callback after click
+        },
+        // Callback after click
       }).showToast();
+    }
+  };
+
+
+  {% comment %} 
+  {%if form.errors %}
+  Toastify({
+    text: "User Exist",
+    duration: 3000,
+    newWindow: false,
+    gravity: "bottom", // `top` or `bottom`
+    position: "center", // `left`, `center` or `right`
+    stopOnFocus: true, // Prevents dismissing of toast on hover
+    style: {
+      background: "red",
+
+    },
+    // Callback after click
+  }).showToast();
   {% endif %} {% endcomment %}
 </script>
 {% endblock customScript %}
