Updated registration and request form

--- a/static/homeStyle.css
+++ b/static/homeStyle.css
@@ -28,5 +28,7 @@ nav .btn:hover,nav .btn:focus{
     .subDiv{
         min-height: 100vh !important;
     } */
-
+ul{
+    list-style-type: none;
+}
    
