--- a/templates/Login/userLogin.html
+++ b/templates/Login/userLogin.html
@@ -11,29 +11,26 @@
 />{%endblock%} 
 {%block content %}
 <div class="content position-relative my-5 ">
-    <div class="text-center ">
-        <img src="https://st2.depositphotos.com/2924751/7578/i/950/depositphotos_75783241-stock-photo-syringe-pen-drawing.jpg"
-            alt="Syringe" class="img img-fluid h-100 opacity-50 shadow rounded" />
-    </div>
-    <div class="position-absolute top-50  start-50 translate-middle">
-        <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center">
+        <div class=" bg-light border p-5 shadow-lg">
             <form action="{%url 'login:userLogin'%}" method='POST'>
                 {% csrf_token %}
-                <div class="row  mb-5 text-center">
+                <div class="row  mb-5  text-center">
                     <h4 class="fs-2">Login</h4>
-                    <hr class="text-danger py-1">
+                    <hr>
                 </div>
                 <div class="row my-2">
-                    <input type="text" placeholder="username" name="username" class="form-control text-center" id="" />
+                    <input type="text" placeholder="Email" name="username" class="form-control text-center" id="" />
                 </div>
                 <div class="row">
-                    <input type="password" placeholder="password" name="password" class="form-control px-5 text-center"
+                    <input type="password" placeholder="Password" name="password" class="form-control px-5 text-center"
                         id="" />
                 </div>
                 <div class="d-flex justify-content-center my-3">
-                    <input type="submit" value="login" class="btn w-50 btn-dark" />
+                    <input type="submit" value="login" class="btn w-50 btn-md btn-dark" />
                 </div>
             </form>
+            <div class="mx-5 px-5"><a class="" href="{%url 'register:userRegister'%}"><button class="btn btn-primary px-2 shadow">Sign up</button></a></div>
         </div>
     </div>
 </div>
