--- a/templates/serviceFrame/bloodBank.html
+++ b/templates/serviceFrame/bloodBank.html
@@ -4,80 +4,160 @@
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <button class="navbar-brand lead">Welcome {{request.user}}</button>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a aria-current="page" class="nav-link" href="{%url 'login:logout'%}"><button class="nav-link  text-white btn btn-danger" >Logout</button></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <hr class="my-4">
-  <div class="content border my-4 p-5 container">
-    <div class="error">
-        {% if messages %}
-          {% for message  in messages  %}
-            <p class="lead text-center">{{message}}</p>
-          {% endfor %}
-        {% endif %}
-        {% if forms.error %}
-          {% for error  in form.error  %}
-            <div class="small row">{{error}}</div>
-          {% endfor %}
-        {% endif %}
-    </div>
-    <div class="request p-5 border-top border-bottom">
-      <h4>Fill Request Form</h4>
-      <form action="#" method="post">
-        {% csrf_token %}
-         <div class="row">
-           <div class="col-sm-6 my-2">
-             {{form.pincode}}
-           </div>
-           <div class="col-sm-6 my-2 text-end">
-             <button class="btn btn-primary" onclick="fetchLocation()">Get Location</button>
-           </div>
-         </div>
-         <h4 class="border-bottom my-4">Location</h4>
-         <div class="row">
-           <div class="col-sm-6 my-2">
-             {{form.district}}
-           </div>
-           <div class="col-sm-6 my-2">
-             {{form.city}}
-           </div>
-         </div>
-         <div class="row my-4">
-           <div class="col-sm-6">
-             {{form.mobile}}
-           </div>
-         </div>
-         <hr>
-         <div class="my-4">
-           <h4 class="my-3">Select Blood type:</h4>
-           <div class="row mx-5">
-             {{form.blood}}
-           </div>
-         </div>
-         <div class="row my-4 d-flex justify-content-center">
-           <p class="lead text-center w-50"><input type="checkbox" name="checkme" required id="" class='form-check-input mx-2'>I hereby agree that requested blood are only used for medical emergencies only.Incase if found it for other purpose legal steps are taken aganist the user.</p>
-         </div>
-         <div class="d-flex justify-content-center">
-          <button class="btn btn-danger py-2 fs-4 px-4">Submit</button>
-         </div>
-      </form>
+  <div class="container-fluid">
+    <button class="navbar-brand lead">Welcome {{request.user}}</button>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a aria-current="page" class="nav-link" href="{%url 'login:userHome'%}"><button class="nav-link  text-white btn btn-dark" >Home</button></a>
+        </li>
+        <li class="nav-item">
+          <a aria-current="page" class="nav-link" href="{%url 'login:logout'%}"><button
+              class="nav-link  text-white btn btn-danger">Logout</button></a>
+        </li>
+      </ul>
     </div>
   </div>
+</nav>
+<hr class="my-4">
+<div class="content border my-4  container">
+  <div class="error p-5">
+    {% if messages %}
+    {% for message in messages %}
+    <p class="lead text-center alert alert-danger">{{message}}</p>
+    {% endfor %}
+    {% endif %}
+  </div>
+  <div class="request p-2 border-top border-bottom">
+    <h4>Doner Details</h4>
+    <form action="#" method="post">
+      {% csrf_token %}
+      <div class="row my-2">
+        <div class="col-sm-6 my-1">{{form.first_name}}
+          <div class="small text-danger">
+            {% if form.first_name.errors %}
+            {% for error in form.first_name.errors %}
+            <div>
+              {{ error|escape }}
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+        <div class="col-sm-6 my-1">{{form.last_name}}
+          <div class="small text-danger">
+            {% if form.last_name.errors %}
+            {% for error in form.last_name.errors %}
+            <div>
+              {{ error|escape }}
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+
+      <div class="row my-2">
+        <div class="col-sm-6 my-2">
+          <label for="gender" class="form-control-label">Gender:</label>
+          {% for radio in form.gender %}
+          <div class="form-check  form-check-inline">
+            {{radio.tag}}
+            <label class="form-check-label" for="flexRadioDefault1">
+              {{radio.choice_label}}
+            </label>
+          </div>
+          {%endfor%}
+        </div>
+      </div>
+      <div class="row my-2">
+        <div class="col-sm-6 my-3">{{form.email}}
+          <div class="small text-danger">
+            {% if form.email.errors %}
+            {% for error in form.email.errors %}
+            <div>
+              {{ error|escape }}
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+        <div class="col-sm-6 my-3">{{form.address}}
+          <div class="small text-danger">
+            {% if form.address.errors %}
+            {% for error in form.address.errors %}
+            <div>
+              {{ error|escape }}
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+  
+      <h4 class="border-bottom my-4">Location</h4>
+      <div class="row">
+        <div class="col-sm-6 my-2">
+          {{form.district}}
+        </div>
+        <div class="col-sm-6 my-2">
+          {{form.city}}
+          <div class="small text-danger">
+            {% if form.city.errors %}
+            {% for error in form.city.errors %}
+            <div>
+              {{ error|escape }}
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      <div class="row my-4">
+        <div class="col-sm-6">
+          {{form.mobile}}
+          <div class="small text-capitalize text-danger">
+            {% if form.mobile.errors %}
+            {% for error in form.mobile.errors %}
+            <div>
+              {{ error|escape }}
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="my-4">
+        <h4 class="my-3">Select Blood type:</h4>
+        <div class="row mx-5">
+          {{form.blood}}
+        </div>
+      </div>
+      <div class="row my-4 d-flex justify-content-center">
+        <p class="lead text-center w-50"><input type="checkbox" name="checkme" required id=""
+            class='form-check-input mx-2'>I hereby agree that requested blood are only used for medical emergencies
+          only.Incase if found it for other purpose legal steps are taken aganist the user.</p>
+      </div>
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-danger py-2 fs-4 px-4">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
+{{form.errors}}
 {% endblock content %}
 {% block customScript %}
+{%load static%}
+<link rel="stylesheet" href="{%static 'node_modules/toastify-js/src/toastify.css'%}">
 <script src="../../static/node_modules/toastify-js/src/toastify.js"></script>
-<script>
+<script src="{%static 'common.js'%}"></script>
+
+<!-- <script>
   const fetchLocation = () => {
       pincode = $("#id_pincode").val();
       const regx = /^\d+$/;
@@ -130,5 +210,5 @@
           }).showToast();
       }
   };
-</script>
+</script> -->
 {% endblock customScript %}
