--- a/templates/serviceFrame/userHome.html
+++ b/templates/serviceFrame/userHome.html
@@ -12,6 +12,9 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
+            <a aria-current="page" class="nav-link" href="{%url 'login:userHome'%}"><button class="nav-link  text-white btn btn-dark" >Home</button></a>
+          </li>
+          <li class="nav-item">
             <a aria-current="page" class="nav-link" href="{%url 'login:logout'%}"><button class="nav-link  text-white btn btn-danger" >Logout</button></a>
           </li>
         </ul>
